# company-knowledge-cloud-rag

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
apps/company-knowledge-ui/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
apps/openwebui/: README.md  cloud_rag_pipe.py
benchmarks/: README.md
benchmarks/datasets/: onboarding_questions.json
benchmarks/k6/: smoke.js  soak.js  spike.js  (+1 more)
claude-ui/: README.md
config/: topics.json
docs/: 01-solution-overview.md  02-architecture.md  03-data-flow.md  04-sync-strategy.md  05-security-acl.md  06-implementation-phases.md  07-diploma-novelty.md  08-repo-structure.md  09-build-order.md  project-critique.md  remediation-plan.md
eval/: LIVE_RUNBOOK.md  README.md  answer-eval-table.md  baseline-table.md  build_extended_dataset.py  build_semantic_fixture.py  build_semantic_manifest.py  live-scenarios.md  run_behavior_eval.py  run_extended_eval.py  run_live_scenarios.py
generated_onenote_pages/: README.md  manifest.csv
generated_onenote_pages_automotive/: README.md  manifest.csv
infra/: README.md  docker-compose.yml
prompts/: 00-master-prompt.md  01-phase-foundation.md  02-phase-sharepoint.md  03-phase-onenote.md  04-phase-answer-engine.md  05-phase-ops.md  06-reviewer-prompt.md  phase-8-custom-topic-frontend.md
scripts/: diagnose-local-stack.ps1  force-incremental-sync.ps1  force-sync.ps1  generate_onenote_automotive_content_pack.py  generate_onenote_content_pack.py  seed_trending.py  start-onenote-stack.ps1
tests/: README.md  conftest.py  test_account_admin.py  test_acl_retrieval.py  test_answer_formatting.py  test_answer_relevance.py  test_api.py  test_app_features.py  test_auth_security.py  test_benchmark_assets.py  test_billing_setup_regression.py  test_clarification.py  test_config.py  test_context_builder.py  test_conversation_context.py  test_daily_schedule.py  test_embedding_eval.py  test_embeddings.py  test_eval_metrics.py  test_evaluation.py  test_flutter_hmi_setup_regression.py  test_graph_webhooks.py  test_hedged_answers.py  test_llm_adapter.py  test_ollama_embeddings.py  test_onenote_sync.py  test_openwebui_pipe.py  test_prompt_contract.py  test_query_embedding_cache.py  test_query_understanding.py  test_semantic_retrieval.py  test_sharepoint_sync.py  test_subject_gate.py  test_topics.py  test_vector_store.py  test_wrong_guide_disambiguation.py
(+423 files in other folders)
